deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resume
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: resume
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http
